# mq-bridge-app

./:  .coderabbit.yaml  .aiignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  MCP.md  README.md  TODO.md  config.yml  docker-compose.yml  index.html  output.txt  package-lock.json  package.json  playwright.config.js  svelte.config.js  tsconfig.json  vite.config.js  vitest.config.js
.github/workflows/: ci.yml  release.yml
config/: file-tail-to-nats.yml  file-to-http.yml  http-to-kafka.yml  kafka-to-nats.yml  lightweight-broker.yml  schema.json  static-to-http.yml
config/mcp/: http_kafka.yml  stdio_in_mem.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs
crates/cli/tests/: web_ui_test.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: config.rs  encrypted_config.rs  lib.rs  ui_api.rs  ui_app.rs  web_ui.rs
crates/core/static/: index.html  index.js
crates/core/static/assets/: index.css
crates/desktop/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/desktop/icons/: icon.icns
crates/desktop/src/: lib.rs  main.rs
dev/config/: dev-ui.yml  http-to-kafka.yml  http-to-static.yml  kafka-to-nats.yml  lightweight-broker.yml  rabbitmq-to-file.yml  schema.json
dev/config/mcp/: schema.json
dev/docs/: IBM_MQ_SETUP.md
dev/import-export/: asyncapi.sample.json  mqb-config.consumers-showcase.sample.json  mqb-export.protocol-showcase.sample.json  openapi.sample.json
dev/scripts/: generate-ui-types.mjs
examples/import-export/: README.md  mqb-export.sample.json  mqb-presets.sample.json  postman.collection.sample.json
scripts/: dev-backend.mjs  vendor.mjs
src/: config.rs  consumer_registry.rs  lib.rs  main.rs  mcp.rs  publisher_registry.rs  ui_app.rs  web_ui.rs
static/: app.js  consumers.js  custom-form.js  dialogs.js  index.html  index.js  legacy.js  mq-workbench-concept.html  publishers.js  routes.js  style.css  tauri-bridge.js  vanilla-schema-forms.js  webawesome-init.js
static/assets/: index.css
tests/: README.txt  build_docker.sh  generate_lines.py  go.mod  server copy.go  server.go  server.py  web_ui_test.rs
tests/fixtures/import-export/: mqb-export.sample.json  mqb-presets.sample.json  openapi.sample.json
tests/playwright/: showcase.spec.js  ui-visual.spec.js  ui.spec.js
tests/playwright/fixtures/: ui-config.yml
tests/unit/: bootstrap-runtime-status.test.ts  component-regressions.test.ts  config-api.test.ts  consumer-grouping.test.ts  consumers-view.test.ts  custom-form.test.ts  dialogs.test.ts  dirty-state.test.ts  encrypted-json-storage.test.ts  endpoint-utils.test.ts  feature-detection.test.ts  import-export.test.ts  password-field-visibility.test.ts  payload-format.test.ts  publisher-grouping.test.ts  publishers-view.test.ts  routes-view.test.ts  routes.test.ts  routing.test.ts  runtime-poller.test.ts  runtime-status.test.ts  schema-utils.test.ts  settings-panel.test.ts  settings.test.ts  storage-mode-visibility.test.ts  storage-security.test.ts  storage.test.ts  style-regressions.test.ts  svelte-forms.test.ts  test-helpers.ts  view-navigation.test.ts
ui/: index.html  ui_refactor.md
ui/coverage/: config-api.ts.html  consumers-view.ts.html  dirty-state.ts.html  index.html  publishers-view.ts.html  routes-view.ts.html  routes.ts.html  routing.ts.html  runtime-status.ts.html  settings.ts.html  stores.ts.html  utils.ts.html  view-navigation.ts.html
ui/src/: App.svelte  bootstrap.ts  js-runtime.ts  legacy-globals.d.ts  legacy-runtime.ts  main.ts
ui/src/components/: CodeEditor.svelte  ConsumersPanel.svelte  Dialog.svelte  HeaderRowsEditor.svelte  HeaderSaveButton.svelte  JsonPreviewDialog.svelte  MainTabs.svelte  PayloadDisplay.svelte  PublishersPanel.svelte  RoutesPanel.svelte  SettingsPanel.svelte  SidebarImportActions.svelte  Topbar.svelte
ui/src/lib/: app-shell.ts  browser.ts  config-api.ts  consumer-grouping.ts  consumers-view.ts  dialogs.ts  dirty-state.ts  encrypted-json-storage.ts  endpoint-metadata.ts  endpoint-utils.ts  entity-key.ts  feature-detection.ts  grouping-utils.ts  import-export.ts  panel-types.ts  payload-format.ts  publisher-grouping.ts  publishers-view.ts  routes-view.ts  routes.ts  routing.ts  runtime-status.ts  runtime-window.ts  schema-utils.ts  settings.ts  sidebar-ui.ts  storage-security.ts  storage.ts  stores.ts  theme-bridge.ts  types.ts  utils.ts  vanilla-schema-forms.d.ts  view-navigation.ts  workspace-config.ts
ui/src/lib/forms/: AdditionalPropertyRow.svelte  ArrayItemRow.svelte  BasicAuthEditor.svelte  CheckboxField.svelte  CollapsibleFields.svelte  Endpoint.svelte  FormField.svelte  GenericAdditionalPropertyRow.svelte  HeadersEditor.svelte  MountedNode.svelte  OptionalSectionField.svelte  PasswordField.svelte  ScalarEndpointInput.svelte  custom-form.ts  password-field-visibility.ts  render-svelte.ts
ui/src/lib/state/: app-stores.ts
ui/src/lib/storage/: app-storage.ts  encrypted-json.ts
