[workspace]
members = ["crates/core", "crates/cli", "crates/desktop"]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
mq-bridge-app-core = { path = "crates/core", version = "0.2.0" }

[profile.release]
panic = "abort"

[profile.release-with-lto]
inherits = "release"
lto = true
strip = true
