[workspace]
members = ["crates/core", "crates/cli", "crates/desktop"]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
# Define the core crate as a workspace dependency with its version for crates.io
mq-bridge-app-core = { version = "0.2.0", path = "crates/core" }

[profile.release]
panic = "abort"

[profile.release-with-lto]
inherits = "release"
lto = true
strip = true
