[workspace]
members = ["crates/core", "crates/cli", "crates/desktop"]
default-members = ["crates/cli"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2024"

[workspace.dependencies]
# Define the core crate as a workspace dependency with its version for crates.io
mq_bridge_app = { version = "0.2.2", path = "crates/core", package = "mq-bridge-app-core" }

[profile.release]
panic = "abort"

[profile.release-with-lto]
inherits = "release"
lto = true
strip = true
