[package]
name = "mq-bridge-app-desktop"
version = "0.2.0"
edition = "2024"
authors = ["Marco Mengelkochs"]
repository = "https://github.com/marcomq/mq-bridge-app"
license = "MIT"
description = "Tauri desktop application for mq-bridge-app."
readme = "../../README.md"
publish = false
build = "build.rs"

[lib]
name = "mq_bridge_app_desktop"
path = "src/lib.rs"

[[bin]]
name = "mq-bridge-app-desktop"
path = "src/main.rs"

[dependencies]
mq_bridge_app = { package = "mq-bridge-app-core", path = "../core" }
anyhow = "1.0.102"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
metrics = { version = "0.24.3" }
metrics-exporter-prometheus = "0.18.1"
rustls = "0.23.38"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2", features = [] }
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "signal", "tracing", "sync"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["full"]
integration-test = ["mq_bridge_app/integration-test"]
ibm-mq = ["mq_bridge_app/ibm-mq"]
arm64-cross-compile = ["mq_bridge_app/arm64-cross-compile"]
full = ["mq_bridge_app/full"]
middleware = ["mq_bridge_app/middleware"]
mongodb = ["mq_bridge_app/mongodb"]
http = ["mq_bridge_app/http"]
kafka = ["mq_bridge_app/kafka"]
aws = ["mq_bridge_app/aws"]
nats = ["mq_bridge_app/nats"]
mqtt = ["mq_bridge_app/mqtt"]
zeromq = ["mq_bridge_app/zeromq"]
sled = ["mq_bridge_app/sled"]
grpc = ["mq_bridge_app/grpc"]
amqp = ["mq_bridge_app/amqp"]
